# tb_ml

./: .gitignore  README.md  pyproject.toml
Notebooks/: Tests2.ipynb
ml_lib/: __init__.py  diagrams.py  environment.py  experiment_tracking.py  feature_specification.py  misc.py  register.py  typing.py
ml_lib/datasets/: __init__.py  base_classes.py  datapoint.py  feature_specification.py  registration.py  splitter.py  splitting.py  transforms.py  utils.py
ml_lib/datasets/datasets/: __init__.py  randomly_generated_dataset.py  simple_shapes.py  tar_dataset.py
ml_lib/display/: diagrams.py  training_curves.py
ml_lib/misc/: __init__.py  basic.py  context_managers.py  data_structures.py  matchers.py  module_link.py  time.py  torch_functions.py  typing.py
ml_lib/models/: __init__.py  base_classes.py  layers.py  registration.py
ml_lib/models/diffusion/: training_helpers.py
ml_lib/models/layers/: VAE.py  __init__.py  attention.py  basic.py  combinators.py  positional_embeddings.py  sumformer.py
ml_lib/models/models/: VAE.py
ml_lib/pipeline/: __init__.py  annealing_scheduler.py  control.py  experiment.py  experiment_tracking.py  registers.py  tester.py  trainer.py  training_hooks.py
ml_lib/pipeline/testing/: tests.py
ml_lib/reporting/: report.py
ml_lib_scripts/: json_schemas.py  migrate_to_uuid.py
scripts/: json_schemas.py  migrate_to_uuid.py
tb_ml/: environment.py  misc.py  register.py
tb_ml/datasets/: __init__.py  base_classes.py  registration.py  simple_shapes.py  transforms.py
tb_ml/models/: base_classes.py
tb_ml/pipeline/: annealing_scheduler.py  trainer.py  training_hooks.py
